--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   color: rgb(var(--foreground-rgb));
@@ -25,4 +31,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
