--- a/src/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
+++ b/src/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
@@ -1,7 +1,8 @@
 .container {
-  @apply p-5 flex items-center gap-3 hover:bg-gray-400
+  @apply p-5 flex items-center gap-3 hover:bg-gray-400 hover:text-gray-300
+  mt-1 mb-1 rounded-lg
 }
 
 .active{
-  @apply bg-gray-400
+  @apply bg-gray-400 text-gray-300
 }
