--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -25,12 +25,13 @@
 body {
   -webkit-font-smoothing: antialiased;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+    @apply bg-gray-100
 }
 
 a {
