--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -3,16 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-gold: #CD8F17;
+  --secondary: #171821;
+  --tertiary: #2C2D33;
+  --quaternary: #21222D;
+  --primary-text-light: #D9D9D9;
+
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --primary-gold: #CD8F17;
+    --secondary: #171821;
+    --tertiary: #2C2D33;
+    --quaternary: #21222D;
+    --primary-text-light: #D9D9D9;
   }
 }
 
@@ -24,14 +29,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-    @apply bg-gray-100
+ @apply bg-secondary-color
 }
 
 a {
