--- a/src/app/ui/navbar/navbar.module.css
+++ b/src/app/ui/navbar/navbar.module.css
@@ -1,23 +1,34 @@
+.navbar {
+ @apply bg-secondary-color p-5 border-b-[0px] border-tertiary-color
+}
+
 .container {
-  @apply flex justify-between items-center rounded-lg p-5 bg-gray-300
-}
-
-.title {
-  @apply text-gray-500 font-semibold capitalize
-}
-
-.menu {
-  @apply flex items-center gap-5
+  @apply flex flex-row flex-wrap items-center justify-between 
 }
 
 .search {
-  @apply flex items-center gap-5 p-2 rounded-lg bg-gray-400
+ @apply flex flex-row relative focus-within:text-primary-color
 }
 
-.input {
-  @apply bg-transparent border-none text-gray-200
+.search_input {
+  @apply h-8 min-w-[620px] bg-quaternary-color rounded-lg p-5 focus:outline-none
 }
 
-.icons {
-  @apply flex gap-5
+.search_icon {
+  @apply absolute flex items-center right-0 -inset-y-1 gap-2 p-3 
+}
+
+.user {
+  @apply flex flex-row 
+}
+
+.user_data {
+  @apply flex flex-row items-center gap-2
+}
+.user_data_avatar {
+  filter: invert(99%) sepia(5%) saturate(2%) hue-rotate(228deg) brightness(105%) contrast(100%);
+  @apply fill-white
+}
+.user_data_name {
+
 }
