feat: change datagrid method build

--- a/src/app/ui/sidebar/sidebar.module.css
+++ b/src/app/ui/sidebar/sidebar.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply top-10  h-screen sticky border-r-[1px] border-tertiary-color
+  @apply   h-screen sticky border-r-[1px] border-tertiary-color
 }
 
 .logo{
